WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
240173
Crash in WebCore::Frame::setPrinting
https://bugs.webkit.org/show_bug.cgi?id=240173
Summary
Crash in WebCore::Frame::setPrinting
Gabriel Nava Marino
Reported
2022-05-06 10:11:52 PDT
<
rdar://problem/92389535
>
Attachments
Patch for landing
(1.54 KB, patch)
2022-05-06 10:15 PDT
,
Gabriel Nava Marino
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Gabriel Nava Marino
Comment 1
2022-05-06 10:15:17 PDT
Created
attachment 458962
[details]
Patch for landing
EWS
Comment 2
2022-05-06 14:04:38 PDT
Committed
r293922
(
250369@main
): <
https://commits.webkit.org/250369@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 458962
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug