Cherry-pick r293922. rdar://problem/93602176

null ptr deref in WebCore::Frame::setPrinting
    https://bugs.webkit.org/show_bug.cgi?id=240173

    Reviewed by Wenson Hsieh.

    Check m_doc in Frame::setPrinting before access, as it is a RefPtr that can become null.

    * page/Frame.cpp:
    (WebCore::Frame::setPrinting):

    Canonical link: https://commits.webkit.org/250369@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@293922 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/245886.588@safari-613-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-613-branch@294843 268f45cc-cd09-0410-ab3c-d52691b4dbfc